style.css added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@ s
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="shared.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header>
+      <div class="page-logo">
+        <a href="./index.html">Travel Goals</a>
+      </div>
+      <nav></nav>
+    </header>
+    <!-- main -->
+
+    <main>
+      <section></section>
+      <section></section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
