--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
-s
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Travel Goals</title>
   </head>
   <body>
-    <!-- header -->
     <header>
-      <div class="page-logo">
-        <a href="./index.html">Travel Goals</a>
+      <div id="page-logo">
+        <a href="/index.html">Travel Goals</a>
       </div>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="">About</a></li>
+        </ul>
+      </nav>
     </header>
-    <!-- main -->
-
     <main>
-      <section></section>
-      <section></section>
+      <section id="hero">
+        <h1>Joe's Travel Page</h1>
+        <p>Let's explore the world together!</p>
+        <a href="/places.html">Discover places</a>
+      </section>
+      <section id="highlights"></section>
     </main>
-
     <footer></footer>
   </body>
 </html>
